--- a/WebAppFirst/Views/Shippers/Index.cshtml
+++ b/WebAppFirst/Views/Shippers/Index.cshtml
@@ -4,6 +4,9 @@
     ViewBag.Title = "Index";
 }
 
+@*Viittaus fontawesomen sivuille fas-imagen käyttöä varten*@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
 <h2>Index</h2>
 
 <p>
@@ -23,9 +26,17 @@
         <td>@Html.DisplayFor(modelItem => item.Phone)</td>
         <td>@Html.DisplayFor(modelItem => item.Region.RegionDescription)</td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ShipperID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ShipperID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ShipperID })
+            @Html.ActionLink("Edit", "Edit", new { id = item.ShipperID }) |
+            @Html.ActionLink("Details", "Details", new { id = item.ShipperID }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.ShipperID }) |
+            @*Linkki svg-imagella, jossa viittaus juuren Shippers-controllerin Edit-metodiin*@
+            <a class="btn btn-primary" href="~/Shippers/Edit/@item.ShipperID">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
+                </svg>
+            </a> |
+            @*Linkki fas-imagella, jossa linkki viittaus juuren Shippers-controllerin Delete-metodiin, jolle annetaan parametrinä ShipperID*@
+            <a class="btn btn-primary fa fa-trash" href="~/Shippers/Delete/@item.ShipperID"> Delete</a>
         </td>
     </tr>
 }
