--- a/WebAppFirst/Views/Products/Index.cshtml
+++ b/WebAppFirst/Views/Products/Index.cshtml
@@ -19,7 +19,7 @@
 
 </script>    
 }
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <h2>Index</h2>
 <h4>Tuotteita @Model.Count() kappaletta</h4>
 <table class="table table-hover">
@@ -43,9 +43,9 @@
             <td>@prod.UnitsInStock</td>
             <td>@prod.UnitsOnOrder</td>
             <td>@prod.ImageLink</td>
-            <td><button class="btn btn-success" onclick='naytaValittuTuote("@prod.ProductName")'>Muokkaa</button></td>
-            <td><button class="btn btn-primary showProductId" data-ProductID="@prod.ProductID">Muokkaa</button></td>
-            <td><button class="btn btn-danger" data-ProductID="@prod.ProductID" id="poistaTuote">Poista</button></td>
+            <td><button class="btn btn-success fa fa-list" onclick='naytaValittuTuote("@prod.ProductName")'> Näytä</button></td>
+            <td><button class="btn btn-primary showProductId fas fa-edit" data-ProductID="@prod.ProductID"> Muokkaa</button></td>
+            <td><button class="btn btn-danger fa fa-trash" data-ProductID="@prod.ProductID" id="poistaTuote"> Poista</button></td>
         </tr>
         }
     </tbody>
