--- a/WebAppFirst/Views/Products/Index.cshtml
+++ b/WebAppFirst/Views/Products/Index.cshtml
@@ -1,74 +1,47 @@
 ﻿@model IEnumerable<WebAppFirst.Models.Products>
+
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Index uusi";
 }
-@section scripts {
-<script type="text/javascript">
-    $(function () {
-        $(".showProductId").click(function () {
-            var productId = $(this).data("productid");
-            alert(productId);
-        });
-    });
-    $(function () {
-        $("#poistaTuote").click(function () {
-            var productId = $(this).data("productid");
-            alert(productId);
-        });
-    });
 
-</script>    
+<h2>Index uusi</h2>
+
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>@Html.DisplayNameFor(model => model.ProductName)</th>
+        <th>@Html.DisplayNameFor(model => model.QuantityPerUnit)</th>
+        <th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
+        <th>@Html.DisplayNameFor(model => model.UnitsInStock)</th>
+        <th>@Html.DisplayNameFor(model => model.UnitsOnOrder)</th>
+        <th>@Html.DisplayNameFor(model => model.ReorderLevel)</th>
+        <th>@Html.DisplayNameFor(model => model.Discontinued)</th>
+        <th>@Html.DisplayNameFor(model => model.ImageLink)</th>
+        <th>@Html.DisplayNameFor(model => model.Categories.CategoryName)</th>
+        <th>@Html.DisplayNameFor(model => model.Suppliers.CompanyName)</th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>@Html.DisplayFor(modelItem => item.ProductName)</td>
+        <td>@Html.DisplayFor(modelItem => item.QuantityPerUnit)</td>
+        <td>@Html.DisplayFor(modelItem => item.UnitPrice)</td>
+        <td>@Html.DisplayFor(modelItem => item.UnitsInStock)</td>
+        <td>@Html.DisplayFor(modelItem => item.UnitsOnOrder)</td>
+        <td>@Html.DisplayFor(modelItem => item.ReorderLevel)</td>
+        <td>@Html.DisplayFor(modelItem => item.Discontinued)</td>
+        <td>@Html.DisplayFor(modelItem => item.ImageLink)</td>
+        <td>@Html.DisplayFor(modelItem => item.Categories.CategoryName)</td>
+        <td>@Html.DisplayFor(modelItem => item.Suppliers.CompanyName)</td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.ProductID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.ProductID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.ProductID })
+        </td>
+    </tr>
 }
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-<h2>Index</h2>
-<h4>Tuotteita @Model.Count() kappaletta</h4>
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>Tuote ID</th>
-            <th>Tuotteen nimi</th>
-            <th>A-hinta</th>
-            <th>Varastomäärä</th>
-            <th>Tilattu määrä</th>
-            <th>Kuvalinkki</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (WebAppFirst.Models.Products prod in Model)
-        {
-        <tr>
-            <td class="showProductId" data-ProductID="@prod.ProductID">@prod.ProductID</td>
-            <td>@prod.ProductName</td>
-            <td>@prod.UnitPrice</td>
-            <td>@prod.UnitsInStock</td>
-            <td>@prod.UnitsOnOrder</td>
-            <td>@prod.ImageLink</td>
-            <td><button class="btn btn-success fa fa-list" onclick='naytaValittuTuote("@prod.ProductName")'> Näytä</button></td>
-            <td><button class="btn btn-primary showProductId fas fa-edit" data-ProductID="@prod.ProductID"> Muokkaa</button></td>
-            <td><button class="btn btn-danger fa fa-trash" data-ProductID="@prod.ProductID" id="poistaTuote"> Poista</button></td>
-        </tr>
-        }
-    </tbody>
+
 </table>
-<script>
-    function naytaValittuTuote(tuoteID) {
-        alert(tuoteID);
-    }
-</script>
-<script>
-    const getCellValue = (tr, idx) => tr.children[idx].innerText || tr.children[idx].textContent;
-
-    const comparer = (idx, asc) => (a, b) => ((v1, v2) =>
-        v1 !== '' && v2 !== '' && !isNaN(v1) && !isNaN(v2) ? v1 - v2 : v1.toString().localeCompare(v2)
-    )(getCellValue(asc ? a : b, idx), getCellValue(asc ? b : a, idx));
-
-    document.querySelectorAll('th').forEach(th => th.addEventListener('click', (() => {
-        const table = th.closest('table');
-        const tbody = table.querySelector('tbody');
-        Array.from(tbody.querySelectorAll('tr'))
-            .sort(comparer(Array.from(th.parentNode.children).indexOf(th), this.asc = !this.asc))
-            .forEach(tr => tbody.appendChild(tr));
-    })));
-</script>
-
-
