--- a/WebAppFirst/Views/Shared/_Layout.cshtml
+++ b/WebAppFirst/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </div>*@
-    <div class="container body-content">
+    <div class="container-fluid">
         @RenderBody()
         <hr />
         <footer>
