Lisätty ViewModel OrderSummaryData, sekä Orders-kontrolleri ja näkymä, josta ViewModelia pääsee katsomaan

--- a/WebAppFirst/Views/Shared/_Layout.cshtml
+++ b/WebAppFirst/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                     <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
                         <a class="dropdown-item" href="/Products/Index">Products</a>
                         <a class="dropdown-item" href="/Products/Index2">Productcards</a>
+                        <a class="dropdown-item" href="/Orders/Index">Orders</a>
                         <a class="dropdown-item" href="/Shippers/Index">Shippers</a>
                     </div>
                 </li>
