--- a/WebAppFirst/Views/Shared/_Layout.cshtml
+++ b/WebAppFirst/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/chart")
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -35,8 +36,10 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Applications</a>
                     <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 42px, 0px);">
                         <a class="dropdown-item" href="/Products/Index">Products</a>
+                        <a class="dropdown-item" href="/Statistics/CategorySales">Tilastoja</a>
                         <a class="dropdown-item" href="/Products/Index2">Productcards</a>
                         <a class="dropdown-item" href="/Orders/Index">Orders</a>
+                        <a class="dropdown-item" href="/Orders/TilausOtsikot">Orderdetails</a>
                         <a class="dropdown-item" href="/Shippers/Index">Shippers</a>
                     </div>
                 </li>
